<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieProject</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="my_movies">My Movies</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="body">body</string>
    <string name="something">something</string>
    <string name="url">URL</string>
    <string name="show_url">show URL</string>
    <string name="show">show</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="Moviename">Moviename</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="title_activity_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="deletemovie">delete Movie</string>
    <string name="edit">edit</string>
    <string name="button">show</string>
    <string name="delete">delete all movies</string>
    <string name="exit">exit</string>

</resources>
